# cage-lite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cage_lite/: cli.py
cage_lite/core/: action.py  approval.py  boundary.py  decision.py  effect.py  evidence.py  ledger.py  receipt.py  standing.py
cage_lite/demo/: payment_replay.py
cage_lite/policies/: payment.py
cage_lite/ui/: app.py  app_data.py  app_styles.py  receipt_viewer.py  receipt_viewer_v1.py
cage_lite/ui/views/: architecture.py  boundary_runs.py  overview.py  replay.py  warrants.py
examples/: payment_approval_demo.py  payment_bind_demo.py  payment_narrowed_demo.py  payment_no_bind_demo.py  payment_policy_demo.py
tests/: test_boundary.py  test_cli.py  test_effect.py  test_effect_ledger.py  test_evidence.py  test_examples.py  test_payment_policy.py  test_payment_replay_demo.py  test_public_links.py  test_receipt.py  test_receipt_v04.py  test_ui_app.py  test_ui_app_data.py  test_ui_overview.py  test_ui_warrants.py
