[project]
name = "cage-lite"
version = "0.1.0"
description = "CAGE-lite: lightweight prebind assurance framework for agentic actions"
authors = [
  { name = "Roopam Sure" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "streamlit>=1.37",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cage_lite*"]
exclude = ["tests*", "examples*", "docs*", "playground*"]